Api Url wird aus den settings gelesen

--- a/src/ConsoleClient.JWT/appsettings.json
+++ b/src/ConsoleClient.JWT/appsettings.json
@@ -3,6 +3,6 @@
     "Authority": "",
     "ClientId": "",
     "Scope": "",
-    "PrivateKey": ""
-  }
+    "PrivateKey": "" },
+  "BaseUrl" : ""
 }
